--- a/devices/psu/hanmatek/hm310t.md
+++ b/devices/psu/hanmatek/hm310t.md
@@ -1,8 +1,37 @@
 # HM310T
 
+Good power supply for hobbyist. It is cheap and does the work.
+
+**Warning** if you want to use more than one HM310T on the same test bench: you will have to change the modbus unit id of the power supply to identify it correctly.
+
 ![HM310T](hm310t.jpg ':size=500')
 
-**WARNING! /dev/ttyUSB0 not present in Ubuntu 22.04**
+## Use
+
+**Supported by:**
+
+- platform-python
+
+**Interface Example Declaration**
+
+```json
+{
+    "name": "My Power Supply",
+    "driver": "hm310t",
+    "settings": {
+      "unit": 1
+    }
+}
+```
+
+| Setting | Optionnal | Default | Description                                     |
+| ------- | --------- | ------- | ----------------------------------------------- |
+| unit    | true      | 1       | Integer to select between multiple power supply |
+
+
+## Fix
+
+**WARNING! /dev/ttyUSBx not present in Ubuntu 22.04**
 
 On Ubuntu 22, there is an USB conflict.
 
@@ -16,14 +45,10 @@ ENV{PRODUCT}=="1a86/7523/*", ENV{BRLTTY_BRAILLE_DRIVER}="bm", GOTO="brltty_usb_r
 # reboot
 ```
 
-**Panduza interface minimal template**
 
-```json
-{
-    "name": "My Power Supply",
-    "driver": "hm310t"
-}
-```
+## Understand
+
+This device use modbus protocol, here are the register map
 
 **Modbus Registers**
 
@@ -46,27 +71,21 @@ DeviceAddr default = 1 MODBUS slave ID address
 | PS_SetVoltage  | 0x0030 (48) | RW   | 2Dec Set voltage                                                               |
 | PS_SetCurrent  | 0x0031      | RW   | 3Dec Set current                                                               |
 | PS_SetTimeSpan | 0x0032      | RW   | ????                                                                           |
-
-<!-- 
-  - Bit mask (OCP 0x02/OVP 0x01) Ptotect status<p>SCP:OTP:OPP:OCP:OVP<p>OVP：Over voltage protection<p>OCP：Over current protection<p>OPP：Over power protection<p>OTP：Over tempreture protection<p>SCP：short-circuit protection                          -->
-
-<!-- 
-PS_Decimals   | 0x0005      | R | Value 0x233 <p>Note 2: Decimal point digit capacity information as follow:<p>  voltage current power decimal point digit capacity <p>Dat=ShowPN /((2<<8)/(3<<4)/(3<<0)) =>0.00V 0.000A 0.000W <p> For example when read:0x0233 (563) <p>mean that voltage 2 decimal,current 3 decimal,power 3 decimal.<p>
-PS_PowerStat | 0x8801 | ? |
-PS_defaultShow | 0x8802 |? |
-PS_SCP | 0x8803  |? |
-PS_Buzzer | 0x8804  |RW | Buzzer enablement 
-PS_Device | 0x9999        | R/W | Set communication address - SlaveID : 1 default  |
-PS_SDTime | 0xCCCC |? |
-PS_UL | 0xC110        |?     | 11d / xC111 = 1 |
-PS_UH | 0xC11E        | ?    | 3200d / xC11F = 1 |
-PS_IL | 0xC120          |?   | 21 / xC121=1  |
-PS_IH | 0xC12E           |?  | 10100/ xC12F=1 |
-PSM_Voltage | 0x1000 |RW
-PSM_Current | 0x1001  |RW
-PSM_TimeSpan | 0x1002 |R?
-PSM_Enable | 0x1003 | ?
-PSM_NextOffset | 0x10 |?-->
+| PS_PowerStat   | 0x8801      | ?    |                                                                                |
+| PS_defaultShow | 0x8802      | ?    |                                                                                |
+| PS_SCP         | 0x8803      | ?    |                                                                                |
+| PS_Buzzer      | 0x8804      | RW   | Buzzer enablement                                                              |
+| PS_Device      | 0x9999      | R/W  | Set communication address - SlaveID : 1 default                                |
+| PS_SDTime      | 0xCCCC      | ?    |                                                                                |
+| PS_UL          | 0xC110      | ?    | 11d / xC111 = 1                                                                |
+| PS_UH          | 0xC11E      | ?    | 3200d / xC11F = 1                                                              |
+| PS_IL          | 0xC120      | ?    | 21 / xC121=1                                                                   |
+| PS_IH          | 0xC12E      | ?    | 10100/ xC12F=1                                                                 |
+| PSM_Voltage    | 0x1000      | RW   |                                                                                |
+| PSM_Current    | 0x1001      | RW   |                                                                                |
+| PSM_TimeSpan   | 0x1002      | R?   |                                                                                |
+| PSM_Enable     | 0x1003      | ?    |                                                                                |
+| PSM_NextOffset | 0x10        | ?    |                                                                                |
 
 **Sources**
 
