--- a/content/docs/configurations/V0_1.md
+++ b/content/docs/configurations/V0_1.md
@@ -1,22 +1,30 @@
 ---
-title: "Version 0.1"
+title: "Version 0.1.0"
 weight: 10
 ---
 
-# Version 0.1
+# Version 0.1.0
 
-## Change logs
+The goal of this version is to freeze current state of reflexion to ensure first demonstrations
 
-- ADD: 
-- REM: 
-- MOD: 
+**RELEASE DATE**: ???
+
+## Change logs
+
+- `MOD`: PSU becomes BPS
+- `ADD`: Support for Hanmatek/HM310T BPS, Ammeter and Voltmeter
+- `ADD`: Support for Owon/XDM1041 Ammeter and Voltmeter
+- `ADD`: Admin dashboard to configure, start and stop the platform
+- `ADD`: Documentation page to setup the platform
+- `ADD`: Sandbox and cxx ??? descoped ?
 
 ## Configuration
 
-| Item                       | Version  |
-|----------------------------|----------|
-| panduza-doc                |          |
-| panduza-py                 |          |
-| panduza-admin-dashboard    |          |
-
+| Item                    | Version  |
+| ----------------------- | -------- |
+| panduza-doc             | 0.1.0    |
+| panduza-py              | 0.1.0    |
+| panduza-admin-dashboard | 0.1.0    |
+| panduza-cxx             | 0.1.0  ? |
+| sandbox                 | 0.1.0  ? |
 
