propose to integrate the rapsberry pico dio instead of the multimeter

--- a/content/docs/configurations/V0_1.md
+++ b/content/docs/configurations/V0_1.md
@@ -13,7 +13,7 @@ The goal of this version is to freeze current state of reflexion to ensure first
 
 - `MOD`: PSU becomes BPS
 - `ADD`: Support for Hanmatek/HM310T BPS, Ammeter and Voltmeter
-- `ADD`: Support for Owon/XDM1041 Ammeter and Voltmeter
+- `ADD`: Support for Raspberry Pico DIO Controller as DIO interfaces
 - `ADD`: Admin dashboard to configure, start and stop the platform
 - `ADD`: Documentation page to setup the platform
 - `ADD`: Sandbox and cxx ??? descoped ?
