synchro before goal freeze 0.1.0

--- a/content/docs/configurations/V0_1.md
+++ b/content/docs/configurations/V0_1.md
@@ -11,8 +11,8 @@ The goal of this version is to freeze current state of reflexion to ensure first
 
 ## Change logs
 
-- `MOD`: PSU becomes BPS
-- `ADD`: Support for Hanmatek/HM310T BPS, Ammeter and Voltmeter
+- `MOD`: PSU becomes BPC
+- `ADD`: Support for Hanmatek/HM310T BPC, Ammeter and Voltmeter
 - `ADD`: Admin dashboard to configure, start and stop the platform
 - `ADD`: Documentation page to setup the platform
 
