reduce the scope of 0.1.0

--- a/content/docs/configurations/V0_1.md
+++ b/content/docs/configurations/V0_1.md
@@ -5,14 +5,15 @@ weight: 10
 
 # Version 0.1.0
 
-The goal of this version is to freeze current state of reflexion to ensure first demonstrations
+The goal of this version is to freeze current state of reflexion to ensure first demonstrations.
+It mainly focus on controlling the BPS HM310T and the fake one.
 
 **RELEASE DATE**: ???
 
 ## Change logs
 
 - `MOD`: PSU becomes BPC
-- `ADD`: Support for Hanmatek/HM310T BPC, Ammeter and Voltmeter
+- `ADD`: Support for Hanmatek/HM310T BPC and Ammeter
 - `ADD`: Admin dashboard to configure, start and stop the platform
 - `ADD`: Documentation page to setup the platform
 
