Structure release message

--- a/content/docs/configurations/V0_1.md
+++ b/content/docs/configurations/V0_1.md
@@ -5,10 +5,10 @@ weight: 10
 
 # Version 0.1.0
 
+**RELEASE DATE**: 28/08/2023
+
 The goal of this version is to freeze current state of reflexion to ensure first demonstrations.
 It mainly focus on controlling the BPS HM310T and the fake one.
-
-**RELEASE DATE**: ???
 
 ## Change logs
 
@@ -16,6 +16,12 @@ It mainly focus on controlling the BPS HM310T and the fake one.
 - `ADD`: Support for Hanmatek/HM310T BPC and Ammeter
 - `ADD`: Admin dashboard to configure, start and stop the platform
 - `ADD`: Documentation page to setup the platform
+
+## Installs
+
+```bash
+wget -q -O - https://raw.githubusercontent.com/Panduza/panduza-installer/main/release/install_0_1_0.sh | sudo bash
+```
 
 ## Configuration
 
