--- a/content/docs/configurations/V0_1.md
+++ b/content/docs/configurations/V0_1.md
@@ -19,8 +19,14 @@ It mainly focus on controlling the BPS HM310T and the fake one.
 
 ## Installs
 
+### Platform
 ```bash
 wget -q -O - https://raw.githubusercontent.com/Panduza/panduza-installer/main/release/install_0_1_0.sh | sudo bash
+```
+
+### Client
+```bash
+pip install "git+https://github.com/Panduza/panduza-py.git@0.1.0#egg=panduza&subdirectory=client/"
 ```
 
 ## Configuration
