Update and rename V0_1.md to V0_1_0.md

--- a/content/docs/configurations/V0_1_0.md
+++ b/content/docs/configurations/V0_1_0.md
@@ -21,7 +21,7 @@ It mainly focus on controlling the BPS HM310T and the fake one.
 
 ### Platform
 ```bash
-wget -q -O - https://raw.githubusercontent.com/Panduza/panduza-installer/main/release/install_0_1_0.sh | sudo bash
+wget -q -O - https://raw.githubusercontent.com/Panduza/panduza-installer/0.1.0/release/install_0_1_0.sh | sudo bash
 ```
 
 ### Client
