--- a/content/docs/configurations/V0_1_1.md
+++ b/content/docs/configurations/V0_1_1.md
@@ -11,13 +11,14 @@ Minors fixes of the 0.1.0
 
 ## Change logs
 
-- `MOD`: Fix Fake BPS on the admin-dashboard
+- `MOD`: Fix Fake BPS on admin-dashboard
+- `MOD`: Fix float precision issue on panduza-py
 
 ## Installs
 
 ### Platform
 ```bash
-wget -q -O - https://raw.githubusercontent.com/Panduza/panduza-installer/0.1.0/release/install_0_1_1.sh | sudo bash
+wget -q -O - https://raw.githubusercontent.com/Panduza/panduza-installer/0.1.1/release/install_0_1_1.sh | sudo bash
 ```
 
 ### Client
@@ -29,6 +30,6 @@ pip install "git+https://github.com/Panduza/panduza-py.git@0.1.1#egg=panduza&sub
 
 | Item                    | Version  |
 | ----------------------- | -------- |
-| panduza-doc             | 0.1.0    |
-| panduza-py              | 0.1.0    |
+| panduza-doc             | 0.1.1    |
+| panduza-py              | 0.1.1    |
 | panduza-admin-dashboard | 0.1.1    |
