--- a/content/docs/configurations/V0_2_0.md
+++ b/content/docs/configurations/V0_2_0.md
@@ -5,14 +5,17 @@ weight: 10
 
 # Version 0.2.0
 
-**RELEASE DATE**: ???
+**RELEASE DATE**: 30/10/2023
 
 Release a first sandbox version to control power supply basics features.
 
 ## Change logs
 
-- `MOD`:
-- `ADD`:
+- `ADD`: CXX library
+- `ADD`: Sandbox Qt Application
+- `MOD`: Upgrade scan mecanism
+- `MOD`: Fix issues to make it works with the sandbox
+- `ADD`: Append 2 - BPS korad ka3005p and tenma 72-2710
 
 ## Installs
 
